Small czech text Fix offered content types in API - if no allowed types were found, all were offered

--- a/src/Umbraco.Web.UI/Umbraco/config/lang/cs.xml
+++ b/src/Umbraco.Web.UI/Umbraco/config/lang/cs.xml
@@ -1067,6 +1067,7 @@ To manage your website, simply open the umbraco back office and start adding con
   <area alias="wc-grid">
     <key alias="placeholderTitle">Nadpis...</key>
     <key alias="placeholderSubtitle">Podnadpis...</key>
+    <key alias="placeholderPerex">Popisek...</key>
   </area>
   <area alias="wc-general">
     <key alias="noValue">Žádná hodnota</key>
